--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "server",
+  "name": "node-js-jwt-auth-mongodb",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "node.js",
+    "express",
+    "jwt",
+    "authentication",
+    "mongodb"
+  ],
+  "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "concurrently": "^7.2.2",
-    "cookie-parser": "^1.4.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.7.0",
-    "mongoose": "^6.4.2",
-    "nodemon": "^2.0.18",
-    "peer": "^0.6.1",
-    "socket.io": "^4.5.1"
+    "mongoose": "^5.9.1"
   }
 }
