--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-URI="mongodb+srv://lancinggrm:86747486b@lancing.bluxh1o.mongodb.net/?retryWrites=true&w=majority"
+URI=mongodb+srv://lancinggrm:86747486b@lancing.bluxh1o.mongodb.net/?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = youraccesstokensecret
 REFRESH_TOKEN_SECRET = yourrefreshtokensecret
